cif/org.eclipse.escet.cif.tests/tests/checks/FuncNoSpecificUserDefCheckNoUserDef.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
  ------------------------------------------
  (1/1) Function is a user-defined function.
  ------------------------------------------
   * In the top-level scope of the specification:
     - func int INT_PARAM_inc(int x):
                ^
     - func int INT_NO_PARAM_fifteen():
                ^
     - func bool EXT_NO_PARAM_f(): "java:somepkg.SomeClass.someMethod|.";
                 ^
     - func bool EXT_PARAM_h(int v): "java:somepkg.SomeClass.someMethod2|.";
                 ^
   * In group "g":
     - func int INT_PARAM_inc(int x):
                ^
     - func int INT_NO_PARAM_fifteen():
                ^
     - func bool EXT_NO_PARAM_f(): "java:somepkg.SomeClass.someMethod|.";
                 ^
     - func bool EXT_PARAM_h(int v): "java:somepkg.SomeClass.someMethod2|.";
                 ^
